--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-cli</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>vue-cli</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+<script>
+  (function (documents, windows) {
+    var domElement = documents.documentElement,
+      resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+      setRem = function () {
+        var clientWidth = domElement.clientWidth
+        if (!clientWidth) return;
+        if (clientWidth >= 750) {
+          domElement.style.fontSize = '100px'
+        } else {
+          domElement.style.fontSize = 100 * (clientWidth / 750) + 'px';
+        }
+      }
+    if (!documents.addEventListener) return
+    setRem()
+    windows.addEventListener(resizeEvt, setRem, false)
+    documents.addEventListener('DOMContentLoaded', setRem, false)
+  })(document, window)
+</script>
 </html>
